Change homepage url

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://dannyngcw.github.io/webpage",
+  "homepage": "http://dannyngcw.github.io",
   "name": "website",
   "version": "0.1.0",
   "private": true,
